--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ aiosqlite~=0.19.0
 click~=8.1.7
 python-telegram-bot~=20.6
 SQLAlchemy~=2.0.22
-pytest==7.4.2
-pytest-asyncio==0.21.1
+pubnub~=7.3.1
+pytest~=7.4.2
+pytest-asyncio~=0.21.1
