--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,8 @@
 [mypy]
 plugins = sqlalchemy.ext.mypy.plugin
+
+[mypy-pubnub.*]
+ignore_missing_imports = True
+
+[mypy-aioconsole]
+ignore_missing_imports = True
