--- a/.github/workflows/static_checks.yml
+++ b/.github/workflows/static_checks.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ruff mypy mypy-extensions
+        pip install -r requirements.txt
     - name: Analysing the code with ruff
       run: |
         ruff suppgram
