Add tests to CI

--- a/.github/workflows/static_checks.yml
+++ b/.github/workflows/static_checks.yml
@@ -24,3 +24,9 @@ jobs:
     - name: Analysing the code with mypy
       run: |
         mypy suppgram
+    - name: Set up MongoDB
+      run: |
+        docker run -d mongo:latest
+    - name: Running tests
+      run: |
+        PYTHONPATH=. pytest .
