--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
   - Usage:
       - Quickstart: usage/quickstart.md
   - Development:
+      - 'Contribution guide': development/contribution_guide.md
       - 'Architecture overview': development/architecture_overview.md
       - 'Core entities': development/core_entities.md
       - 'Customer frontends': development/customer_frontends.md
