--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,8 @@ nav:
   - Home: index.md
   - Usage:
       - Quickstart: usage/quickstart.md
+      - 'All-in-one CLI': usage/all_in_one_cli.md
+      - Builder: usage/builder.md
   - Development:
       - 'Contribution guide': development/contribution_guide.md
       - 'Architecture overview': development/architecture_overview.md
