--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dev = [
     "mypy~=1.7.1",
     "mypy-extensions~=1.0.0",
     "pytest~=7.4.2",
+    "pytest-mock~=3.12.0",
     "pytest-asyncio~=0.21.1",
     "ruff~=0.1.6",
 ]
