--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ mypy-extensions==1.0.0
 mypy==1.7.1
 pubnub~=7.3.1
 pytest-asyncio~=0.21.1
+pytest-mock~=3.12.0
 pytest~=7.4.2
 python-telegram-bot~=20.6
 ruff==0.1.6
