--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,6 +34,7 @@ jobs:
       run: |
         docker pull postgres:latest
     - name: Run tests
+      # TODO properly wait until postgres is ready https://stackoverflow.com/a/55835081/999858
       run: |
         docker run -p 5432:5432 -e POSTGRES_USER=suppgram -e POSTGRES_PASSWORD=test -e POSTGRES_DB=suppgram_test -d postgres:latest
         docker run -p 27017:27017 -d mongo:latest
