--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ pubnub = [
 shell = ["aioconsole~=0.6.2"]
 sqlalchemy = [
     "aiosqlite~=0.19.0",
+    "alembic~=1.13.1",
     "asyncpg~=0.29.0",
     "SQLAlchemy~=2.0.22",
 ]
