--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,10 +9,12 @@ nav:
       - Quickstart: usage/quickstart.md
       - 'All-in-one CLI': usage/all_in_one_cli.md
       - Builder: usage/builder.md
-      - 'Customizing texts': usage/customizing_texts.md
   - Features:
       - 'PostgreSQL/SQLite integration': features/sql_integration.md
       - 'MongoDB integration': features/mongodb_integration.md
+      - 'Telegram integration': features/telegram_integration.md
+      - 'PubNub integration': features/pubnub_integration.md
+      - 'Customizing texts': features/customizing_texts.md
   - Development:
       - 'Contribution guide': development/contribution_guide.md
       - 'Architecture overview': development/architecture_overview.md
