--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,4 @@
-mkdocs==1.5.3
+mkdocs~=1.6.1
+mkdocstrings~=0.28.2
+mkdocstrings-python~=1.16.2
 mkdocs-autorefs==0.5.0
-mkdocstrings==0.24.0
-mkdocstrings-python==1.7.5
